--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "path": "^0.12.7",
     "fs": "0.0.1-security",
     "cluster": "^0.0.1",
-    "os": "^0.1.1"
+    "os": "^0.1.1",
+    "stream-throttle": "^0.1.3"
   }
 }
